--- a/kitty.conf
+++ b/kitty.conf
@@ -26,7 +26,7 @@ font_family FiraCodeNerdFontComplete
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-# font_size 11.0
+font_size 12.0
 
 #: Font size (in pts)
 
@@ -1429,7 +1429,7 @@ allow_remote_control yes
 #:     zle -N scroll-and-clear-screen
 #:     bindkey '^l' scroll-and-clear-screen
 
-# map kitty_mod+f5 load_config_file
+map cmd+shift+f5 load_config_file
 
 #: Reload kitty.conf, applying any changes since the last time it was
 #: loaded. Note that a handful of settings cannot be dynamically
