--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -8,6 +8,7 @@
     - [mkdir -p ~/.config/Code/User]
     - [mkdir -p ~/.config/i3]
     - [mkdir -p ~/.config/i3status]
+    - [mkdir -p ~/.config/kitty]
     - [mkdir -p ~/.config/sway]
     - [mkdir -p ~/.config/waybar]
     - [mkdir -p ~/.config/wofi]
