Add perf_permissions to the install

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -44,6 +44,7 @@
     ~/bin/mantidpythonfromtemplate: mantid-tools/mantidpythonfromtemplate
     ~/bin/mantidreductionlogs: mantid-tools/mantidreductionlogs
     ~/bin/monitorautoreduction: bin/monitorautoreduction.py
+    ~/bin/perf_permissions.sh: bin/perf_permissions.sh
     ~/bin/purge: purge/purge
     ~/bin/profstats.py: bin/profstats.py
     ~/bin/queue-list.py: bin/queue-list.py
