Add script to convert yaml to json

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -56,6 +56,7 @@
     ~/bin/waylandprogs: bin/waylandprogs
     ~/bin/weather: bin/weather
     ~/bin/weatherthing: bin/weatherthing
+    ~/bin/yq: bin/yq
     ~/.bash_completion.d/ansible-completion.bash: ansible-bash-completion/ansible-completion.bash
     ~/.bash_completion.d/ansible-doc-completion.bash: ansible-bash-completion/ansible-doc-completion.bash
     ~/.bash_completion.d/ansible-galaxy-completion.bash: ansible-bash-completion/ansible-galaxy-completion.bash
