Create empty vim directory to put stuff in

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -19,6 +19,7 @@
     - ~/tmp
     - ~/.todo.actions.d
     - ~/.todo
+    - ~/.vim
 
 - shell:
     - [cp Mantid.user.properties ~/.mantid/Mantid.user.properties]
